v0.25.0/_sources/content/user-guide/examples/02-gravity/plot_inv_grav_tiled.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "content/user-guide/examples/02-gravity/plot_inv_grav_tiled.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_content_user-guide_examples_02-gravity_plot_inv_grav_tiled.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_content_user-guide_examples_02-gravity_plot_inv_grav_tiled.py:


PF: Gravity: Tiled Inversion Linear
===================================

Invert data in tiles.

.. GENERATED FROM PYTHON SOURCE LINES 8-28

.. code-block:: Python


    import os
    import numpy as np
    import matplotlib.pyplot as plt

    from simpeg.potential_fields import gravity
    from simpeg import (
        maps,
        data,
        data_misfit,
        regularization,
        optimization,
        inverse_problem,
        directives,
        inversion,
    )
    from discretize.utils import mesh_builder_xyz, refine_tree_xyz, active_from_xyz

    from simpeg import utils








.. GENERATED FROM PYTHON SOURCE LINES 29-37

Setup
-----

Define the survey and model parameters

Create a global survey and mesh and simulate some data



.. GENERATED FROM PYTHON SOURCE LINES 37-53

.. code-block:: Python



    # Create an array of observation points
    xr = np.linspace(-30.0, 30.0, 20)
    yr = np.linspace(-30.0, 30.0, 20)
    X, Y = np.meshgrid(xr, yr)

    # Move the observation points 5m above the topo
    Z = -np.exp((X**2 + Y**2) / 75**2)

    # Create a topo array
    topo = np.c_[utils.mkvc(X.T), utils.mkvc(Y.T), utils.mkvc(Z.T)]

    # Create station locations draped 0.1 m above topo
    rxLoc = np.c_[utils.mkvc(X.T), utils.mkvc(Y.T), utils.mkvc(Z.T) + 0.1]








.. GENERATED FROM PYTHON SOURCE LINES 54-60

Divided and Conquer
-------------------

Split the data set in two and create sub-problems



.. GENERATED FROM PYTHON SOURCE LINES 60-90

.. code-block:: Python


    # Mesh parameters
    h = [5, 5, 5]
    padDist = np.ones((3, 2)) * 100
    octree_levels = [8, 4]

    # Create tiles
    local_indices = [rxLoc[:, 0] <= 0, rxLoc[:, 0] > 0]
    local_surveys = []
    local_meshes = []
    for local_index in local_indices:
        receivers = gravity.receivers.Point(rxLoc[local_index, :])
        srcField = gravity.sources.SourceField([receivers])
        local_survey = gravity.survey.Survey(srcField)

        # Create a local mesh that covers all points, but refined on the local survey
        local_mesh = mesh_builder_xyz(
            topo, h, padding_distance=padDist, depth_core=100, mesh_type="tree"
        )
        local_mesh = refine_tree_xyz(
            local_mesh,
            local_survey.receiver_locations,
            method="surface",
            octree_levels=octree_levels,
            finalize=True,
        )

        local_surveys.append(local_survey)
        local_meshes.append(local_mesh)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /usr/share/miniconda/envs/simpeg-test/lib/python3.11/site-packages/discretize/utils/mesh_utils.py:528: FutureWarning:

    In discretize v1.0 the TreeMesh will change the default value of diagonal_balance to True, which will likely slightly change meshes you have previously created. If you need to keep the current behavior, explicitly set diagonal_balance=False.

    /home/vsts/work/1/s/examples/02-gravity/plot_inv_grav_tiled.py:79: DeprecationWarning:

    The surface option is deprecated as of `0.9.0` please update your code to use the `TreeMesh.refine_surface` functionality. It will be removed in a future version of discretize.





.. GENERATED FROM PYTHON SOURCE LINES 91-97

Global Mesh
------------

Create a global mesh survey for simulation



.. GENERATED FROM PYTHON SOURCE LINES 97-152

.. code-block:: Python


    mesh = mesh_builder_xyz(
        topo, h, padding_distance=padDist, depth_core=100, mesh_type="tree"
    )

    # This guarantees that the local meshes are always coarser or equal
    for local_mesh in local_meshes:
        mesh.insert_cells(
            local_mesh.gridCC,
            local_mesh.cell_levels_by_index(np.arange(local_mesh.nC)),
            finalize=False,
        )
    mesh.finalize()

    # Define an active cells from topo
    activeCells = active_from_xyz(mesh, topo)
    nC = int(activeCells.sum())

    # We can now create a density model and generate data
    # Here a simple block in half-space
    # Get the indices of the magnetized block
    model = np.zeros(mesh.nC)
    ind = utils.model_builder.get_indices_block(
        np.r_[-10, -10, -30],
        np.r_[10, 10, -10],
        mesh.gridCC,
    )

    # Assign magnetization values
    model[ind] = 0.3

    # Remove air cells
    model = model[activeCells]

    # Create reduced identity map
    idenMap = maps.IdentityMap(nP=nC)

    # Create a global survey just for simulation of data
    receivers = gravity.receivers.Point(rxLoc)
    srcField = gravity.sources.SourceField([receivers])
    survey = gravity.survey.Survey(srcField)

    # Create the forward simulation for the global dataset
    simulation = gravity.simulation.Simulation3DIntegral(
        survey=survey, mesh=mesh, rhoMap=idenMap, active_cells=activeCells
    )

    # Compute linear forward operator and compute some data
    d = simulation.fields(model)

    # Add noise and uncertainties
    # We add some random Gaussian noise (1nT)
    synthetic_data = d + np.random.randn(len(d)) * 1e-3
    wd = np.ones(len(synthetic_data)) * 1e-3  # Assign flat uncertainties





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/vsts/work/1/s/examples/02-gravity/plot_inv_grav_tiled.py:119: BreakingChangeWarning:

    Since SimPEG v0.25.0, the 'get_indices_block' function returns a single array with the cell indices, instead of a tuple with a single element. This means that we don't need to unpack the tuple anymore to access to the cell indices.
    If you were using this function as in:

        ind = get_indices_block(p0, p1, mesh.cell_centers)[0]

    Make sure you update it to:

        ind = get_indices_block(p0, p1, mesh.cell_centers)

    To hide this warning, add this to your script or notebook:

        import warnings
        from simpeg.utils import BreakingChangeWarning

        warnings.filterwarnings(action='ignore', category=BreakingChangeWarning)






.. GENERATED FROM PYTHON SOURCE LINES 153-158

Tiled misfits





.. GENERATED FROM PYTHON SOURCE LINES 158-213

.. code-block:: Python

    local_misfits = []
    for ii, local_survey in enumerate(local_surveys):
        tile_map = maps.TileMap(mesh, activeCells, local_meshes[ii])

        local_actives = tile_map.local_active

        # Create the forward simulation
        simulation = gravity.simulation.Simulation3DIntegral(
            survey=local_survey,
            mesh=local_meshes[ii],
            rhoMap=tile_map,
            active_cells=local_actives,
            sensitivity_path=os.path.join("Inversion", f"Tile{ii}.zarr"),
        )

        data_object = data.Data(
            local_survey,
            dobs=synthetic_data[local_indices[ii]],
            standard_deviation=wd[local_indices[ii]],
        )

        local_misfits.append(
            data_misfit.L2DataMisfit(data=data_object, simulation=simulation)
        )


    # Our global misfit
    global_misfit = local_misfits[0] + local_misfits[1]

    # Plot the model on different meshes
    fig = plt.figure(figsize=(12, 6))
    for ii, local_misfit in enumerate(local_misfits):
        local_mesh = local_misfit.simulation.mesh
        local_map = local_misfit.simulation.rhoMap

        inject_local = maps.InjectActiveCells(local_mesh, local_map.local_active, np.nan)

        ax = plt.subplot(2, 2, ii + 1)
        local_mesh.plot_slice(
            inject_local * (local_map * model), normal="Y", ax=ax, grid=True
        )
        ax.set_aspect("equal")
        ax.set_title(f"Mesh {ii+1}. Active cells {local_map.local_active.sum()}")


    # Create active map to go from reduce set to full
    inject_global = maps.InjectActiveCells(mesh, activeCells, np.nan)

    ax = plt.subplot(2, 1, 2)
    mesh.plot_slice(inject_global * model, normal="Y", ax=ax, grid=True)
    ax.set_title(f"Global Mesh. Active cells {activeCells.sum()}")
    ax.set_aspect("equal")
    plt.show()





.. image-sg:: /content/user-guide/examples/02-gravity/images/sphx_glr_plot_inv_grav_tiled_001.png
   :alt: Mesh 1. Active cells 1471, Mesh 2. Active cells 1197, Global Mesh. Active cells 2309
   :srcset: /content/user-guide/examples/02-gravity/images/sphx_glr_plot_inv_grav_tiled_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 214-220

Invert on the global mesh






.. GENERATED FROM PYTHON SOURCE LINES 220-268

.. code-block:: Python


    # Create reduced identity map
    idenMap = maps.IdentityMap(nP=nC)

    # Create a regularization
    reg = regularization.Sparse(mesh, active_cells=activeCells, mapping=idenMap)

    m0 = np.ones(nC) * 1e-4  # Starting model

    # Add directives to the inversion
    opt = optimization.ProjectedGNCG(
        maxIter=100, lower=-1.0, upper=1.0, maxIterLS=20, cg_maxiter=10, cg_rtol=1e-3
    )
    invProb = inverse_problem.BaseInvProblem(global_misfit, reg, opt)
    betaest = directives.BetaEstimate_ByEig(beta0_ratio=1e-1)

    # Here is where the norms are applied
    # Use a threshold parameter empirically based on the distribution of
    # model parameters
    update_IRLS = directives.UpdateIRLS(
        f_min_change=1e-4,
        max_irls_iterations=0,
        irls_cooling_factor=1.5,
        misfit_tolerance=1e-2,
    )
    saveDict = directives.SaveOutputEveryIteration(save_txt=False)
    update_Jacobi = directives.UpdatePreconditioner()
    sensitivity_weights = directives.UpdateSensitivityWeights(every_iteration=False)
    inv = inversion.BaseInversion(
        invProb,
        directiveList=[update_IRLS, sensitivity_weights, betaest, update_Jacobi, saveDict],
    )

    # Run the inversion
    mrec = inv.run(m0)


    # Plot the result
    ax = plt.subplot(1, 2, 1)
    mesh.plot_slice(inject_global * model, normal="Y", ax=ax, grid=True)
    ax.set_title("True")
    ax.set_aspect("equal")

    ax = plt.subplot(1, 2, 2)
    mesh.plot_slice(inject_global * mrec, normal="Y", ax=ax, grid=True)
    ax.set_title("Recovered")
    ax.set_aspect("equal")
    plt.show()



.. image-sg:: /content/user-guide/examples/02-gravity/images/sphx_glr_plot_inv_grav_tiled_002.png
   :alt: True, Recovered
   :srcset: /content/user-guide/examples/02-gravity/images/sphx_glr_plot_inv_grav_tiled_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/vsts/work/1/s/simpeg/directives/_directives.py:1865: FutureWarning:

    SaveEveryIteration.save_txt has been deprecated, please use SaveEveryIteration.on_disk. It will be removed in version 0.26.0 of SimPEG.

    /home/vsts/work/1/s/simpeg/directives/_directives.py:1866: FutureWarning:

    SaveEveryIteration.save_txt has been deprecated, please use SaveEveryIteration.on_disk. It will be removed in version 0.26.0 of SimPEG.


    Running inversion with SimPEG v0.25.0
    ================================================= Projected GNCG =================================================
      #     beta     phi_d     phi_m       f      |proj(x-g)-x|  LS   iter_CG   CG |Ax-b|/|b|  CG |Ax-b|   Comment   
    -----------------------------------------------------------------------------------------------------------------
       0  2.13e+03  8.46e+04  0.00e+00  8.46e+04                         0           inf          inf                
       1  2.13e+03  1.03e+04  3.55e+00  1.79e+04    4.79e+01      0      8        7.88e-04     2.50e+03              
       2  1.07e+03  5.80e+03  6.57e+00  1.28e+04    4.77e+01      0      10       4.34e-03     2.23e+02              
       3  5.34e+02  2.84e+03  1.04e+01  8.41e+03    4.76e+01      0      10       2.62e-03     8.11e+01              
       4  2.67e+02  1.34e+03  1.43e+01  5.16e+03    4.74e+01      0      10       4.51e-03     8.24e+01              
       5  1.33e+02  7.04e+02  1.76e+01  3.05e+03    4.72e+01      0      10       6.02e-03     6.28e+01              
       6  6.67e+01  4.57e+02  2.01e+01  1.80e+03    4.69e+01      0      10       9.00e-03     5.20e+01              
       7  3.34e+01  3.59e+02  2.21e+01  1.10e+03    4.63e+01      0      10       1.84e-02     5.81e+01              
    Reached starting chifact with l2-norm regularization: Start IRLS steps...
    irls_threshold 0.0735952309541996
    Reach maximum number of IRLS cycles: 0
    ------------------------- STOP! -------------------------
    1 : |fc-fOld| = 3.0552e+01 <= tolF*(1+|f0|) = 8.4645e+03
    1 : |xc-x_last| = 3.0721e-02 <= tolX*(1+|x0|) = 1.0048e-01
    0 : |proj(x-g)-x|    = 4.6265e+01 <= tolG          = 1.0000e-01
    0 : |proj(x-g)-x|    = 4.6265e+01 <= 1e3*eps       = 1.0000e-02
    0 : maxIter   =     100    <= iter          =      7
    ------------------------- DONE! -------------------------





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.639 seconds)

**Estimated memory usage:**  328 MB


.. _sphx_glr_download_content_user-guide_examples_02-gravity_plot_inv_grav_tiled.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_inv_grav_tiled.ipynb <plot_inv_grav_tiled.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_inv_grav_tiled.py <plot_inv_grav_tiled.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_inv_grav_tiled.zip <plot_inv_grav_tiled.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
